--- a/MVC03/Views/Employee/Partials/CreateEditPartial.cshtml
+++ b/MVC03/Views/Employee/Partials/CreateEditPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@model EmployeeRequest
+﻿@using DAL.Entities.Enum
+@model EmployeeRequest
 
 <div asp-validation-summary="ModelOnly"></div>
 <div class="form-group mb-3">
@@ -10,6 +11,14 @@
     <label class="form-label" asp-for="Email"></label>
     <input asp-for="Email" class="form-control" />
     <span asp-validation-for="Email" class="text-danger"></span>
+</div>
+<div class="form-group mb-3">
+    <label class="form-label" asp-for="DepartmentId"></label>
+    <select asp-for="DepartmentId" asp-items="@ViewBag.Department"
+            class="form-control">
+        <option value="">Select Department</option>
+    </select>
+    <span asp-validation-for="DepartmentId" class="text-danger"></span>
 </div>
 <div class="form-group mb-3">
     <label class="form-label" asp-for="Address"></label>
