--- a/MVC03/Views/Employee/Index.cshtml
+++ b/MVC03/Views/Employee/Index.cshtml
@@ -30,6 +30,7 @@
             <tr>
                 <th>@Html.DisplayNameFor(e => e.Name)</th>
                 <th>@Html.DisplayNameFor(e => e.Email)</th>
+                <th>@Html.DisplayNameFor(e => e.Department)</th>
                 <th>@Html.DisplayNameFor(e => e.EmployeeType)</th>
                 <th>@Html.DisplayNameFor(e => e.Age)</th>
                 <th>@Html.DisplayNameFor(e => e.Salary)</th>
@@ -47,6 +48,7 @@
 
                     <td>@employee.Name</td>
                     <td>@employee.Email</td>
+                    <td>@employee.Department</td>
                     <td>@employee.EmployeeType</td>
                     <td>@employee.Age</td>
                     <td>@employee.Salary</td>
