--- a/MVC03/Views/Employee/Index.cshtml
+++ b/MVC03/Views/Employee/Index.cshtml
@@ -21,8 +21,21 @@
 <h1>All Employees</h1>
 <br />
 <br />
+
 <a class="btn btn-primary" asp-controller="Employees" asp-action="Create">Create Employee</a>
 <br />
+
+<div class="m-2">
+    <form class="row offset-2" asp-action="Index" method="get">
+        <div class="col-8">
+            <input class="form-control" type="text" name="SearchValue" placeholder="Search by employee name..." />
+        </div>
+        <div class="col-4">
+            <input type="submit" class="btn btn-outline-dark" value="search"/>
+        </div>
+    </form>
+</div>
+
 @if (Model.Any())
 {
     <table class="table table-striped table-hover mt-3">
@@ -83,6 +96,7 @@
         </tbody>
     </table>
 }
+
 else
 {
     <div class="alert alert-info mt-3">
